--- a/IFRS.html
+++ b/IFRS.html
@@ -102,8 +102,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">  
              <li><a class="dropdown-item" href="/IFRS.html">IFRS SMEs</a></li> 
-                <li><a class="dropdown-item" href="/IFRS.html">IFRS</a></li>
-                <li><a class="dropdown-item" href="/IAS.html">IAS</a></li>
+                <li><a class="dropdown-item" href="/soon.html">IFRS</a></li>
+                <li><a class="dropdown-item" href="/soon.html">IAS</a></li>
             </ul>
        
 
@@ -185,18 +185,6 @@
         </div>
     </section>
     <!-- End Services Section -->
-
-
-    <!-- ======= Features Section ======= -->
-
-    <div class="buttonn-area">
-        <a href="#">Button 1</a>
-        <a href="#">Button 2</a>
-        <a href="#">Button 3</a>
-        <a href="#">Button 4</a>
-        <a href="#">Button 5</a>
-        <a href="#">Button 6</a>
-    </div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
